<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:elevation="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_note_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:layout_toStartOf="@+id/bookmark_img"
                android:text="@string/title"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/time_note_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_note_tv"
                android:layout_marginHorizontal="24dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/sample_date"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/bookmark_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/bookmark_button"
                app:srcCompat="@drawable/ic_round_bookmark_border" />

            <ImageView
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/time_note_tv"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/separator"
                app:srcCompat="@drawable/separator" />

            <TextView
                android:id="@+id/content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator1"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:maxLines="3"
                android:text="@string/note_content"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/tag_card_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content_tv"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/tag_bg_blue"
                android:visibility="gone"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tag_tv_note_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textColor="@color/tag_text_blue" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>